Changed the link to the repository

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="centerWrapper">
       <div class="text">
         <h1>playbar.js</h1>
-        <p>is a small and simple playbar written in pure js.<br><br>Download it from <a href="https://github.com/MBALOTA" target="_blank">GitHub</a>!<br><br>Why can't i click on it to make it move? I didn't want to add this.<br>I'll add this if people really want it.<br><br>You can open up the console and type in <code>playBarHorizontal.setProgress(10);</code> or <code>playBarVertical.setPreviewProgress(100);</code> to see what changes.</p>
+        <p>is a small and simple playbar written in pure js.<br><br>Download it from <a href="https://github.com/MBALOTA/playbar.js" target="_blank">GitHub</a>!<br><br>Why can't i click on it to make it move? I didn't want to add this.<br>I'll add this if people really want it.<br><br>You can open up the console and type in <code>playBarHorizontal.setProgress(10);</code> or <code>playBarVertical.setPreviewProgress(100);</code> to see what changes.</p>
       </div>
       <div id="playbarWrapperHorizontal">
         <button id="playbarHorizontalButton"></button>
