Added mobile meta
I always forget to put this damn meta into websites.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="playbar.js Example Site">
     <meta name="keywords" content="Matthias,Balota,Matthias Balota,playbar.js,PlayBar,playbar,PLAYBAR.JS,JavaScript">
     <meta name="author" content="Matthias Balota">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>PlayBar</title>
     <link rel="stylesheet" href="css/playbar.min.css">
