--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="centerWrapper">
       <div class="text">
         <h1>playbar.js</h1>
-        <p>is a small and simple playbar written in pure js.<br><br>Download it from <a href="https://github.com/MBALOTA/playbar.js" target="_blank">GitHub</a>!<br><br>Why can't i click on it to make it move? I didn't want to add this.<br>I'll add this if people really want it.<br><br>You can open up the console and type in <code>playBarHorizontal.setProgress(10);</code> or <code>playBarVertical.setPreviewProgress(100);</code> to see what changes.</p>
+        <p>is a small and simple playbar written in pure js.<br><br>Download it from <a href="https://github.com/MBALOTA/playbar.js" target="_blank">GitHub</a>!<br><br>Why can't i click on it to make it move? I didn't want to add this.<br>I'll add this if people really want it.<br><br>You can open up the console and type in <code>playBarHorizontal.setPreviewProgress(80);</code> or <code>playBarVertical.setProgress(60);</code> to see what changes.</p>
       </div>
       <div id="playbarWrapperHorizontal">
         <button id="playbarHorizontalButton"></button>
@@ -34,11 +34,9 @@
     <script type="text/javascript">
       var playBarHorizontal = new playBar("#playbarWrapperHorizontal", {buttonId: "#playbarHorizontalButton", progressId: "#playbarHorizontalProgress", previewId: "#playbarHorizontalProgressPreview", showPreview: true, buttonOffset: {x: -6, y:0}});
       playBarHorizontal.setProgress(50);
-      playBarHorizontal.setPreviewProgress(70);
 
       var playBarVertical = new playBar("#playbarWrapperVertical", {buttonId: "#playbarVerticalButton", progressId: "#playbarVerticalProgress", previewId: "#playbarVerticalProgressPreview", barType: "vertical", showPreview: true, buttonOffset: {x: 0, y: -6}});
-      playBarVertical.setProgress(60);
-      playBarVertical.setPreviewProgress(80);
+      playBarVertical.setProgress(20);
 
     </script>
   </body>
